--- a/playgraph.cabal
+++ b/playgraph.cabal
@@ -16,10 +16,16 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 executable playgraph
-  main-is:              main.hs
+  main-is:              App.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:        websockets,
-                        base >=4.5 && <4.6
+  build-depends:        wai,
+                        wai-extra,
+                        warp,
+                        scotty,
+                        websockets,
+                        wai-websockets,
+                        wai-handler-devel,
+                        base
   -- hs-source-dirs:      
   default-language:     Haskell2010
