--- a/playgraph.cabal
+++ b/playgraph.cabal
@@ -16,6 +16,7 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 executable playgraph
+  ghc-options:          -threaded -Wall -O
   main-is:              App.hs
   -- other-modules:       
   -- other-extensions:    
