Websockets app with types.

--- a/pallygraph.cabal
+++ b/pallygraph.cabal
@@ -19,5 +19,9 @@ executable pallygraph
                         websockets,
                         wai-websockets,
                         wai-handler-devel,
+                        blaze-html,
+                        containers,
+                        text,
+                        bytestring,
                         base
   default-language:     Haskell2010
