--- a/graph-rtce.cabal
+++ b/graph-rtce.cabal
@@ -1,17 +1,16 @@
-name:                pallygraph
-version:             0.1.0.0
-synopsis:            Collaborative editing over websockets.
-description:         Edit graphs with your pals.
+name:                graph-rtce
+version:             0.0.0.0
+synopsis:            Real-time collaborative editing for graphs.
 license:             MIT
 license-file:        LICENSE
 author:              Daniel Buckmaster
 maintainer:          dan.buckmaster@gmail.com
 build-type:          Simple
-cabal-version:       >=1.10
+cabal-version:       >=1.18
 
-executable pallygraph
+executable graph-rtce
   ghc-options:          -threaded -Wall -O
-  main-is:              App.hs
+  main-is:              Server.hs
   build-depends:        wai, wai-extra, wai-handler-devel, warp,
                         websockets, wai-websockets,
                         scotty == 0.6.2,
@@ -20,5 +19,5 @@ executable pallygraph
                         fay, fay-base, fay-dom,
                         aeson,
                         type-eq == 0.4,
-                        base
+                        base >= 4.6
   default-language:     Haskell2010
