--- a/graph-rtce.cabal
+++ b/graph-rtce.cabal
@@ -9,15 +9,17 @@ build-type:          Simple
 cabal-version:       >=1.18
 
 executable graph-rtce
-  ghc-options:          -threaded -Wall -O
+  hs-source-dirs:       src
   main-is:              Server.hs
-  build-depends:        wai, wai-extra, wai-handler-devel, warp,
+  build-depends:        scotty == 0.6.2,
+                        type-eq == 0.4,
+                        wai, wai-extra, wai-handler-devel, warp,
                         websockets, wai-websockets,
-                        scotty == 0.6.2,
                         blaze-html,
                         containers, text, bytestring,
-                        fay, fay-base, fay-dom,
+                        fay,
                         aeson,
-                        type-eq == 0.4,
+                        mtl,
                         base >= 4.6
+  ghc-options:          -threaded -Wall -O
   default-language:     Haskell2010
